--- a/css/h5base.css
+++ b/css/h5base.css
@@ -1,23 +1,27 @@
-body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, in put, button, textarea, p, blockquote, th, td {
+* {
+    touch-action: pan-y;
+}
+
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,button,textarea,p,blockquote,th,td {
     margin: 0;
     padding: 0;
 }
 
 body {
+    background: #EFEFF4;
     color: #555;
-    font-size: 0;
-    /*font-family: 'Microsoft Yahei', '??????', Tahoma, Helvetica, Arial, sans-serif;*/
-    font-family:PingFang SC;
+    font-size: 14px;
+    font-family: 'Microsoft Yahei', Tahoma, Helvetica, Arial, sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,h2,h3,h4,h5,h6 {
     font-weight: normal;
     font-size: 100%;
 }
 
 a {
     color: #555;
-    text-decoration: none
+    text-decoration: none;
 }
 
 a:hover {
@@ -28,15 +32,15 @@ img {
     border: none;
 }
 
-ol, ul, li {
+ol,ul,li {
     list-style: none;
 }
 
-i, em {
+i,em {
     font-style: normal
 }
 
-input, textarea, select, button {
+input,textarea,select,button {
     font: 14px Verdana, Helvetica, Arial, sans-serif;
     border: 1px solid #999;
     outline: none;
@@ -57,6 +61,7 @@ table {
 }
 
 /* Hides from IE-mac \*/
+
 * html .cf {
     height: 1%;
 }
@@ -66,12 +71,6 @@ table {
 }
 
 /* End hide from IE-mac */
-.clearfix:before,
-.clearfix:after {
-    content: "";
-    display: block;
-    clear: both;
-}
 
 .fl {
     float: left;
@@ -87,23 +86,20 @@ button {
     border: 0;
 }
 
-html body {
-    width: 100%;
-    height: 100%;
-    /*min-width: 1920px;*/
-    overflow-x: hidden;
-    margin: 0;
-    padding: 0;
+@media all and (min-width:310px) {
+    html {
+        font-size: 42px;
+    }
 }
 
-* {
-    box-sizing: border-box;
+@media all and (min-width:370px) {
+    html {
+        font-size: 50px;
+    }
 }
-a{
-    cursor: pointer;
+
+@media all and (min-width:410px) {
+    html {
+        font-size: 55.2px;
+    }
 }
-
-
-
-
-
