--- a/css/z_pages.css
+++ b/css/z_pages.css
@@ -1,3 +1,4 @@
+/*分页*/
 .z_page {
     margin-top: 50px;
     margin-bottom: 50px;
@@ -47,3 +48,38 @@
     border: 1px solid rgba(6, 151, 137, 1);
     background: rgba(239, 255, 253, 1);
 }
+
+/*跑马灯*/
+#z_pmdwrap {
+    width: 500px;
+    margin: 0 auto;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+#z_pmdwrap div {
+    display: inline-block;
+    font-size: 20px;
+    color: #999;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
