--- a/css/base.css
+++ b/css/base.css
@@ -87,5 +87,13 @@ a{
 
 
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+
+/*input[type="number"] {*/
+    /*-moz-appearance: textfield;*/
+/*}*/
 
 
