--- a/css/h5base.css
+++ b/css/h5base.css
@@ -46,6 +46,12 @@ input,textarea,select,button {
     outline: none;
 }
 
+input {
+    outline: none;
+    -webkit-appearance: none; /*去除系统默认的样式*/
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* 点击高亮的颜色*/
+}
+
 table {
     border-collapse: collapse;
 }
