--- a/css/base.css
+++ b/css/base.css
@@ -1,4 +1,4 @@
-body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, in put, button, textarea, p, blockquote, th, td {
+body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, in put, button, textarea, p, blockquote, th {
     margin: 0;
     padding: 0;
 }
@@ -6,7 +6,6 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
 body {
     color: #555;
     font-size: 0;
-    /*font-family: 'Microsoft Yahei', '??????', Tahoma, Helvetica, Arial, sans-serif;*/
     font-family:PingFang SC;
 }
 
@@ -37,15 +36,13 @@ i, em {
 }
 
 input, textarea, select, button {
-    /*font: 14px Verdana, Helvetica, Arial, sans-serif;*/
     border: 1px solid #999;
     outline: none;
 }
 
 table {
-    border-collapse: collapse;
+    /*border-collapse: collapse;*/
 }
-
 
 /* End hide from IE-mac */
 .clearfix:before,
@@ -84,8 +81,6 @@ html body {
 a{
     cursor: pointer;
 }
-
-
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
