--- a/css/z_pages.css
+++ b/css/z_pages.css
@@ -185,7 +185,24 @@
     font-size: 16px;
     cursor: pointer;
 }
-
+.zimgs{
+    width: 100px;
+    height: 100px;
+}
+.zimgx{
+    width: 16px;
+    height: 16px;
+    background: red;
+    color: white;
+    font-size: 12px;
+    text-align: center;
+    line-height: 16px;
+    border-radius: 50%;
+    position: absolute;
+    margin-left: -8px;
+    margin-top: -6px;
+    cursor: pointer;
+}
 /*验证码按钮*/
 #z_yzmbtn {
     cursor: pointer;
@@ -251,7 +268,7 @@
 
 /*tab按钮组*/
 .z_button_group span {
-    padding: 6px 10px;
+    /*padding: 6px 10px;*/
     font-size: 16px;
     color: black;
     display: inline-block;
