--- a/css/z_pages.css
+++ b/css/z_pages.css
@@ -185,11 +185,13 @@
     font-size: 16px;
     cursor: pointer;
 }
-.zimgs{
+
+.zimgs {
     width: 100px;
     height: 100px;
 }
-.zimgx{
+
+.zimgx {
     width: 16px;
     height: 16px;
     background: red;
@@ -203,6 +205,7 @@
     margin-top: -6px;
     cursor: pointer;
 }
+
 /*验证码按钮*/
 #z_yzmbtn {
     cursor: pointer;
@@ -281,11 +284,41 @@
     background: blue;
 }
 
+/*<!--图片垂直滑动-->*/
+.z_slide_group {
+    height: 600px;
+    width: 280px;
+    overflow: hidden;
+    position: relative;
+    background: yellow;
+}
 
+.z_slide1, .z_slide2 {
+    width: 280px;
+    position: absolute;
+    display: block;
+}
 
+.z_slide_group li:hover {
+    border: 4px solid white;
+}
 
+.z_slide1 li,.z_slide2 li {
+    width: 280px;
+    height: 135px;
+    overflow: hidden;
+    margin-bottom: 22px;
+}
 
-
-
+.z_slide1 img {
+    height: 100%;
+    width: 100%;
+    background: white;
+}
+.z_slide2 img {
+    height: 100%;
+    width: 100%;
+    background: white;
+}
 
 
